# pushkind-store

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
.github/workflows/: deploy.yml  deploy_admin.yml  deploy_map.yml
public/: .htaccess
src/: app.rs  env.rs  lib.rs  main.rs  utils.rs
src/models/: alert.rs  api.rs  cart.rs  category.rs  mod.rs  product.rs  shopping_cart.rs  tag.rs  user.rs
src/pages/: alert.rs  cart.rs  category.rs  contacts.rs  mod.rs  navbar.rs  product.rs  products.rs  search.rs
tests/: test_api.rs
