[package]
name = "pushkind-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["nightly", "csr"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
# web-sys = { version = "0.3", features = ["Storage"] }
# leptos-use = { version="0.12.0", features = ["prost" ,"serde","serde_json"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }

[build-dependencies]
dotenvy = "0.15"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-04"]
